Adding scenario Factory and fixig bug